[tool.poetry]
name = "jatlist-api"
version = "0.1.0"
description = ""
authors = ["pcastr <lpviancastrodev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
commitizen = "^3.27.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini.options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev jatlist_api/app.py'

pre_test = 'task lint'
test = 'pytest --cov=jatlist_api -vv'
post_test = 'coverage html'

lint = 'ruff check . && ruff check . --diff '
format = 'ruff check . --fix && ruff format .'



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
